<resources>
    <string name="app_name">Kossen</string>


    <string name="all_menu_action_history">Histórico de Daimoku</string>
    <string name="all_menu_action_sound">Alterar toque</string>
    <string name="all_menu_action_reset">Restaurar</string>

    <string name="all_label_meta">Meta</string>
    <string name="all_button_start">INICIAR</string>
    <string name="all_button_stop">PARAR</string>
    <string name="all_button_resume">CONTINUAR</string>

    <string name="tv_clock_label_placeholder">00:00:00</string>
    <string name="all_alert_clock_reseted">Relógio restaurado =)</string>
    <string name="all_label_goal_reached">Parabéns, você atingiu sua meta!</string>
    <string name="label_add_time_one_hour">+1h</string>
    <string name="label_add_time_thirty_minutes">+30m</string>
    <string name="label_add_time_fifteen_minutes">+15m</string>
    <string name="label_add_time_five_minutes">+5m</string>
    <string name="title_activity_history">Histórico</string>
    <string name="history_total_time_label">Tempo Total:</string>
    <string name="all_history_total_time_placeholder">0 horas, 0 minutos e 0 segundos</string>
    <string name="meta_list_item_data_label">Data:</string>
    <string name="all_button_save_current_time">SALVAR</string>
    <string name="all_dialog_title_confirm_register">Confirmar</string>
    <string name="all_dialog_message_confirm_register">Registrar o tempo atual ?</string>
    <string name="all_alert_time_registered">Tempo registrado! =)</string>
    <string name="all_alert_button_register">REGISTRAR</string>
    <string name="all_alert_label_register_time">Tempo:</string>
    <string name="all_alert_edittext_hint_info">Você pode escrever o motivo do daimoku, o itai-doshin etc… Fique a vontade =)</string>
    <string name="all_alert_label_info">Informações</string>
    <string name="all_alert_label_register_when">Data:</string>
    <string name="all_history_label_daimoku_not_found">Não há daimoku registrado.</string>
    <string name="all_history_toast_item_removed">Item removido</string>
    <string name="all_dialog_message_confirm_delete">Remover o daimoku ?</string>
    <string name="all_dialog_title_confirm_delete">Confirmar</string>

    <string-array name="array_sounds">
        <item>Camila Cabello Havana</item>
        <item>Magical Morning</item>
        <item>Light Ringtone</item>
    </string-array>
</resources>
