<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_frame"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".ui.MainActivity"
    android:weightSum="1"
    tools:ignore="ContentDescription">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".85"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_label_meta"
            android:textColor="@android:color/black"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/tv_goal_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layer_goal_time"
            android:gravity="center"
            android:text="@string/tv_clock_label_placeholder"
            android:textSize="42sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="4">


            <TextView
                android:id="@+id/button_increase_time_one_hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/all_rounded_border_button_green"
                android:focusable="true"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/label_add_time_one_hour"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="@dimen/all_increase_button_size_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/button_increase_time_thirty_minutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/all_rounded_border_button_green"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/label_add_time_thirty_minutes"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="@dimen/all_increase_button_size_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/button_increase_time_fifteen_minutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/all_rounded_border_button_green"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/label_add_time_fifteen_minutes"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="@dimen/all_increase_button_size_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/button_increase_time_five_minutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/all_rounded_border_button_green"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/label_add_time_five_minutes"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="@dimen/all_increase_button_size_text"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/button_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:background="@drawable/all_rounded_border_button_green"
            android:text="@string/all_button_reset"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_time_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_clock_label_placeholder"
            android:textColor="@android:color/black"
            android:textSize="36sp" />


        <Button
            android:id="@+id/bt_start_stop_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/all_rounded_button_green"
            android:text="@string/all_button_start"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>